[project]
name = "tunawrap"
version = "0.1.0"
description = "A wrapper around optuna for easier hyperparameter tuning."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "optuna>=4.4.0",
    "scikit-learn>=1.7.1",
]

[dependency-groups]
dev = [
    "plotly>=6.2.0",
    "pandas>=2.3.1",
    "ipython>=9.4.0",
    "matplotlib>=3.10.7",
    "jupyter>=1.1.1",
    "numpy>=2.3.2",
    "pytest>=8.0.0",
    "ruff>=0.12.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
]
